--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
-    "name": "بوت بي اچ زراب مجانا",
-    "logo": "https://telegra.ph/file/f38fb2d1a10bf2d4531cb.jpg",
-    "description": "اهلا بك في تنصيب بوت بي اچ زراب المطور ابن طشار",
+    "name": "بوت ذكاء اصطناعي",
+    "description": "المطور حسين بايروكرام",
     "keywords": [
         "telegram",
         "bot",
@@ -12,13 +11,20 @@
         "maker",
         "generator"
     ],
-    "repository": "https://github.com/SS7SS/Turbo-bot",
+    "repository": "https://github.com/SS7SS/chatgpt",
     "website": "https://t.me/hussien_pyrogram",
     "success_url": "https://t.me/hussien_pyrogram",
     "env": {
-
+        "id": {
+            "description": "ضع ايدي المطور الخاص بك"
+        },
+        "idch": {
+            "description": "ضع ايدي قناة الاشتراك الاجباري الخاصة بك",
+            "required": "False",
+            "value": ""
+        },
         "token": {
-            "description": "ضع التوكن الخاص بك هنا"
+            "description": "ضع التوكن الخاص بك"
         }
     },
     "stack": "heroku-20",
